infrastructure/k8s/services/authentication.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-database
spec:
  type: ClusterIP # default value
  selector:
    app: authentication-database
  ports:
    - name: authentication-database
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  type: ClusterIP # default value
  selector:
    app: authentication
  ports:
    - name: authentication
      protocol: TCP
      port: 3000
      targetPort: 3000
