infrastructure/k8s/services/expiration.yml
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis
spec:
  type: ClusterIP # default value
  selector:
    app: expiration-redis
  ports:
    - name: expiration-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: expiration
# spec:
#   type: ClusterIP
#   selector:
#     app: expiration
#   ports:
#     - name: expiration
#       protocol: TCP
#       port: 3000
#       targetPort: 3000
