infrastructure/k8s/services/nats.yml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitor
      protocol: TCP
      port: 8222
      targetPort: 8222
