infrastructure/k8s/services/orders.yml
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  type: ClusterIP # default value
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-database
spec:
  type: ClusterIP # default value
  selector:
    app: orders-database
  ports:
    - name: orders-database
      protocol: TCP
      port: 27017
      targetPort: 27017
