infrastructure/k8s/services/payments.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-database
spec:
  type: ClusterIP
  selector:
    app: payments-database
  ports:
    - name: payments-database
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
