infrastructure/k8s/services/tickets.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-database
spec:
  type: ClusterIP
  selector:
    app: tickets-database
  ports:
    - name: tickets-database
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: tickets
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
