infrastructure/k8s/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: authentication
                port:
                  number: 3000

          - pathType: Prefix
            path: "/api/tickets/?(.*)"
            backend:
              service:
                name: tickets
                port:
                  number: 3000

          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: client
                port:
                  number: 3000
